# Ray_Tracing

./: CMakeLists.txt  README.md  Regular_sampler.ppm  image.ppm  main.cpp
BRDFs/: BRDF.h
Cameras/: Pinhole.cpp
GeometricObjects/: GeometricObject.cpp
Samplers/: Jittered.cpp  Jittered.h  PureRandom.cpp  PureRandom.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h
Tracers/: Sinusoid.cpp  Sinusoid.h
Utilities/: Constants.h  Maths.h  Normal.cpp  Point3D.cpp  RGBColor.cpp  Vector3D.cpp
World/: ViewPlane.cpp  ViewPlane.h  World.cpp  World.h
