cmake_minimum_required(VERSION 3.15)
project(Ray_Tracing_from_the_Ground_Up)

set(CMAKE_CXX_STANDARD 17)

add_executable(Ray_Tracing_from_the_Ground_Up
        main.cpp
        BRDFs/BRDF.cpp
        BRDFs/BRDF.h
        BRDFs/Lambertian.h
        BRDFs/Lambertian.cpp
        #build/BuildShadedObjects.cpp
        Cameras/Camera.h
        Cameras/Camera.cpp
        Cameras/Pinhole.h
        Cameras/Pinhole.cpp
        GeometricObjects/GeometricObject.cpp
        GeometricObjects/GeometricObject.h
        GeometricObjects/Plane.cpp
        GeometricObjects/Plane.h
        GeometricObjects/Sphere.cpp
        GeometricObjects/Sphere.h
        Lights/Ambient.h
        Lights/Ambient.cpp
        Lights/Directional.h
        Lights/Directional.cpp
        Lights/Light.h
        Lights/Light.cpp
        Materials/Material.cpp
        Materials/Material.h
        Materials/Matte.h
        Materials/Matte.cpp
        Samplers/Sampler.cpp
        Samplers/Sampler.h
        Samplers/Jittered.cpp
        Samplers/Jittered.h
        Samplers/Regular.cpp
        Samplers/Regular.h
        Samplers/PureRandom.cpp
        Samplers/PureRandom.h
        Tracers/MultipleObjects.cpp
        Tracers/MultipleObjects.h
        Tracers/Tracer.cpp
        Tracers/Tracer.h
        Tracers/Sinusoid.cpp
        Tracers/Sinusoid.h
        Tracers/RayCast.h
        Tracers/RayCast.cpp
        Utilities/Constants.h
        Utilities/Maths.h
        Utilities/Matrix.cpp
        Utilities/Matrix.h
        Utilities/Normal.cpp
        Utilities/Normal.h
        Utilities/Point3D.cpp
        Utilities/Point3D.h
        Utilities/Point2D.cpp
        Utilities/Point2D.h
        Utilities/Ray.cpp
        Utilities/Ray.h
        Utilities/RGBColor.cpp
        Utilities/RGBColor.h
        Utilities/ShadeRec.cpp
        Utilities/ShadeRec.h
        Utilities/Vector3D.cpp
        Utilities/Vector3D.h
        World/ViewPlane.cpp
        World/ViewPlane.h
        World/World.cpp
        World/World.h
        )